# multi-platform-video-publisher

./: .gitignore  README.md  pyproject.toml
docs/: chrome-current-session-failure-archive.md  chrome-current-session-injection.md  roadmap-1.0.md
docs/superpowers/plans/: 2026-04-03-p0-stable-core.md  2026-04-03-review-run-console.md  2026-04-07-publish-failure-archive.md
docs/superpowers/specs/: 2026-04-03-p0-stable-core-design.md  2026-04-03-review-run-console-design.md
scripts/: chrome_current_session_asset_server.py  chrome_current_session_publish.sh
src/mvpublisher/: __init__.py  cli.py  config.py  execution_modes.py  paths.py  workflows.py
src/mvpublisher/approval/: service.py
src/mvpublisher/media/: __init__.py  cover_frames.py  video_skill_adapter.py
src/mvpublisher/models/: __init__.py  draft.py
src/mvpublisher/publishers/: __init__.py  base.py  chrome_current_session.py  douyin.py  runner.py  signals.py  wechat_channels.py  xiaohongshu.py
src/mvpublisher/sessions/: __init__.py  base.py  browser_reuse.py  playwright_fallback.py
src/mvpublisher/storage/: __init__.py  drafts.py
src/mvpublisher/suggestions/: __init__.py  generator.py
src/mvpublisher/validation/: service.py
tests/: test_approval_service.py  test_chrome_current_session_publish.py  test_cli.py  test_cover_frames.py  test_draft_models.py  test_platform_publishers_script_usage.py  test_publish_runner.py  test_publish_signals.py  test_run_console.py  test_session_fallback.py  test_storage.py  test_suggestions.py  test_validation_service.py  test_web_routes.py  test_workflows.py
(+4 files in other folders)
